--- a/examples/sapper/package.json
+++ b/examples/sapper/package.json
@@ -12,16 +12,14 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "@junglejs/client": "file:../../junglejs/client",
+    "@junglejs/server": "file:../../junglejs/server",
     "@rollup/plugin-json": "^4.0.3",
     "compression": "^1.7.1",
-    "junglejs": "file:../../junglejs",
-    "polka": "next",
+    "express": "^4.17.1",
     "sirv": "^0.4.0"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "sapper": "^0.27.0",
-    "svelte": "^3.0.0",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -31,8 +29,11 @@
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "npm-run-all": "^4.1.5",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^5.3.0"
+    "rollup-plugin-terser": "^5.3.0",
+    "sapper": "^0.27.0",
+    "svelte": "^3.0.0"
   }
 }
