--- a/junglejs/preprocess/package.json
+++ b/junglejs/preprocess/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@junglejs/client",
+  "name": "@junglejs/preprocess",
   "version": "0.0.1",
   "description": "The Jamstack static site framework for Svelte",
   "main": "index.js",
@@ -26,6 +26,8 @@
   },
   "homepage": "https://github.com/ConProgramming/junglejs#readme",
   "dependencies": {
+    "acorn": "^7.2.0",
+    "acorn-walk": "^7.1.1",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
