Added: Copying all static files into the build Added: Having a index.html so that express etc can just serve the jungle/build folder Added: Removing the main.js after build is done, because it's only for rollup

--- a/example/package.json
+++ b/example/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "fs-extra": "^9.0.0",
     "morgan": "~1.9.1"
   }
 }
