--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-app",
+  "name": "jungle-example",
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
@@ -18,10 +18,6 @@
   "dependencies": {
     "@junglejs/preprocess": "file:../junglejs/preprocess",
     "@junglejs/server": "file:../junglejs/server",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "fs-extra": "^9.0.0",
-    "morgan": "~1.9.1"
+    "express": "~4.16.1"
   }
 }
