--- a/junglejs/server/package.json
+++ b/junglejs/server/package.json
@@ -33,9 +33,12 @@
     "fs-extra": "^9.0.0",
     "graphql": "^15.0.0",
     "graphql-compose": "^7.16.1",
+    "graphql-compose-json": "^5.3.0",
     "graphql-playground-middleware-express": "^1.7.14",
+    "gray-matter": "^4.0.2",
     "http": "0.0.1-security",
     "lodash.find": "^4.6.0",
+    "marked": "^1.1.0",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "rollup": "^2.11.2"
