Added: Generating routes from multi word file names Added: Generating routes from a variable in the file name like [slug].svelte

--- a/example/package.json
+++ b/example/package.json
@@ -16,8 +16,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "@junglejs/preprocess": "file:../junglejs/preprocess",
-    "@junglejs/server": "file:../junglejs/server",
+    "junglejs": "file:../junglejs",
     "express": "~4.16.1"
   }
 }
