--- a/junglejs/package.json
+++ b/junglejs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "junglejs",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "The Jamstack static site framework for Svelte",
     "main": "index.js",
     "scripts": {
@@ -8,7 +8,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/ConProgramming/junglejs.git"
+        "url": "git+https://github.com/junglejs/junglejs.git"
     },
     "keywords": [
         "svelte",
@@ -22,9 +22,9 @@
     "author": "Conner Aldrich",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/ConProgramming/junglejs/issues"
+        "url": "https://github.com/junglejs/junglejs/issues"
     },
-    "homepage": "https://github.com/ConProgramming/junglejs#readme",
+    "homepage": "https://github.com/junglejs/junglejs#readme",
     "dependencies": {
         "acorn": "^7.2.0",
         "acorn-walk": "^7.1.1",
