--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-svelte-ssr": "^1.0.3",
     "rollup-plugin-terser": "^5.1.2",
     "svelte": "^3.0.0"
   },
