Started work on live reloading built in, which replaces the entire previous build process

--- a/example/package.json
+++ b/example/package.json
@@ -17,7 +17,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "junglejs": "file:../junglejs",
-    "express": "~4.16.1"
+    "express": "~4.16.1",
+    "junglejs": "file:../junglejs"
   }
 }
