--- a/junglejs/package.json
+++ b/junglejs/package.json
@@ -29,6 +29,7 @@
         "acorn": "^7.2.0",
         "acorn-walk": "^7.1.1",
         "apollo-boost": "^0.4.9",
+        "chokidar": "^3.4.2",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "express": "^4.17.1",
