--- a/junglejs/package.json
+++ b/junglejs/package.json
@@ -29,10 +29,12 @@
         "acorn": "^7.2.0",
         "acorn-walk": "^7.1.1",
         "apollo-boost": "^0.4.9",
+        "chokidar": "^3.4.1",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-graphql": "^0.9.0",
+        "express-reload": "^1.2.0",
         "fs-extra": "^9.0.0",
         "graphql": "^15.0.0",
         "graphql-compose": "^7.16.1",
