--- a/example/package.json
+++ b/example/package.json
@@ -2,9 +2,8 @@
   "name": "jungle-example",
   "version": "1.0.0",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "node app.js"
+    "dev": "node app.js",
+    "build": "node build.js"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^12.0.0",
