Added: Page refreshing Added: Removing routes from build after their file is deleted

--- a/junglejs/package.json
+++ b/junglejs/package.json
@@ -30,6 +30,7 @@
         "acorn-walk": "^7.1.1",
         "apollo-boost": "^0.4.9",
         "chokidar": "^3.4.2",
+        "connect-livereload": "^0.6.1",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "express": "^4.17.1",
@@ -42,6 +43,7 @@
         "gray-matter": "^4.0.2",
         "htmlparser2": "^4.1.0",
         "http": "0.0.1-security",
+        "livereload": "^0.9.1",
         "lodash.find": "^4.6.0",
         "marked": "^1.1.0",
         "morgan": "^1.10.0",
