--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "2.0.0",
   "description": "The Jamstack static site framework for Svelte",
   "devDependencies": {
-    "lerna": "^3.22.1"
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.0",
+    "lerna": "^3.22.1",
+    "mock-fs": "^4.13.0",
+    "ts-jest": "^26.4.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.3"
   },
   "keywords": [
     "svelte",
@@ -22,5 +28,16 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/junglejs/junglejs.git"
-  }
+  },
+  "scripts": {
+    "lint": "run-p -c lint:*",
+    "lint:ts": "tslint 'packages/**/*.ts'",
+    "test": "jest"
+  },
+  "workspaces": {
+    "packages": [
+      "packages/core/*"
+    ]
+  },
+  "private": true
 }
