--- a/packages/source-markdown/package.json
+++ b/packages/source-markdown/package.json
@@ -1,17 +1,18 @@
 {
-"name": "@junglejs/source-markdown",
-"version": "0.0.1",
-"description": "",
-"main": "index.js",
-"author": "Hendrik Roth",
-"license": "MIT",
-"dependencies": {
-"fs-extra": "^9.0.1",
-"graphql": "^15.3.0",
-"graphql-compose-json": "^6.0.0",
-"gray-matter": "^4.0.2",
-"lodash.find": "^4.6.0",
-"marked": "^1.2.0",
-"uuid": "^8.3.0"
-}
+  "name": "@junglejs/source-markdown",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
+  "author": "Hendrik Roth",
+  "license": "MIT",
+  "dependencies": {
+    "fs-extra": "^9.0.1",
+    "graphql": "^15.3.0",
+    "graphql-compose": "^7.22.1",
+    "graphql-compose-json": "^6.0.0",
+    "gray-matter": "^4.0.2",
+    "lodash.find": "^4.6.0",
+    "marked": "^1.2.0",
+    "uuid": "^8.3.0"
+  }
 }
