--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,7 @@
   "name": "@junglejs/core",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "keywords": [
     "svelte",
     "ssg",
@@ -25,10 +25,19 @@
     "graphql-compose-json": "^6.0.0",
     "graphql-tag": "^2.11.0",
     "node-fetch": "^2.6.1",
-    "rollup": "^2.28.2"
+    "rollup": "^2.28.2",
+    "@junglejs/source-markdown": "file:../source-markdown"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.2"
+  },
+  "scripts": {
+    "tsc": "tsc"
+  },
+  "files": ["lib"],
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
   }
 }
