--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,11 @@
     "strict": false,
     "allowSyntheticDefaultImports": true,
     "noEmit": true,
-    "baseUrl": ".",
     "resolveJsonModule": true,
     "baseUrl": "./packages",
-    "paths": {}
-  }
+    "paths": {},
+    "lib": ["es6"]
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/node_modules", "**/*.test.ts", "**/*.spec.ts"]
 }
